# Q-Bridge

./: Detailed_Plan.md  Genesis_Document.md  README.md  Roadmap.md  go.mod  go.sum  main.go  main_test.go
internal/data/: models.go
q_bridge/: .gitignore  Cargo.toml  README.md
q_bridge/buffer/: Cargo.toml
q_bridge/buffer/src/: main.rs
q_bridge/common/: Cargo.toml  build.rs
q_bridge/common/proto/: gateway.proto
q_bridge/common/src/: lib.rs
q_bridge/gateway/: Cargo.toml
q_bridge/gateway/src/: main.rs
q_bridge/scripts/: e2e_test_client.py  requirements.txt
q_bridge/transport/: Cargo.toml
q_bridge/transport/src/: main.rs
