[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.11"
prost = "0.12"
actix-web = "4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = { version = "0.25", features = ["tokio-comp"] }
bytes = "1"
uuid = { version = "1.7", features = ["v4"] }
common = { path = "../common" }

# Build dependencies are no longer needed here, they are in the `common` crate.
[build-dependencies]
